About Page : HTML Completed

--- a/About Page/about.html
+++ b/About Page/about.html
@@ -6,6 +6,33 @@
     <title>About Page</title>
 </head>
 <body>
-    
+    <header id="about-header">
+        <button id="previous-button"><b>Previous</b></button>
+    </header>
+    <main id="about-main">
+        <section id="heading-section">
+            <h1>About Color Changer</h1>
+        </section>
+
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>This project is designed to change the background color of the page by clicking on color boxes.</p>
+        </section>
+
+        <section id="working">
+            <h2>How It Works</h2>
+            <p>Click on any of the color boxes in the home page to change the background color.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>For more information, reach us at <a href="abc@example.com">abc@example.com</a>.</p>
+        </section>
+    </main>
+    <footer id="about-footer">
+        <div id="footer-div" class="footer-div">
+            <h3> &copy; Color-Changer</h3>
+        </div>
+    </footer>
 </body>
-</html>
+    </html>
