About Page : CSS Completed

--- a/About Page/about.html
+++ b/About Page/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
+    <link rel="stylesheet" href="./about.css">
 </head>
 <body>
     <header id="about-header">
@@ -12,6 +13,9 @@
     <main id="about-main">
         <section id="heading-section">
             <h1>About Color Changer</h1>
+            <p>This is a color changing website, On Clicking the any one box , the background color of
+                the main section of the page gets change to the color of the box you clicked.
+            </p>
         </section>
 
         <section id="introduction">
