--- a/About Page/about.html
+++ b/About Page/about.html
@@ -38,5 +38,6 @@
             <h3> &copy; Color-Changer</h3>
         </div>
     </footer>
+    <script src="./about.js"></script>
 </body>
     </html>
